add ts types. change project folder structure

--- a/src/website/tsconfig.json
+++ b/src/website/tsconfig.json
@@ -101,5 +101,7 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": ["src/**/*"],
+  // "include": ["src/**/*", "src/components/ui/pages/.tsx"],
+
   "exclude": ["node_modules", "build/**/*"]
 }
