--- a/src/api/package.json
+++ b/src/api/package.json
@@ -4,12 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npm i && tsc -p ./tsconfig.json && npm-run-all --parallel watch:typescript start:server", 
+    "watch:typescript": "tsc -p ./tsconfig.json --watch",
+    "start:server": "nodemon ./build/index.js"
   },
   "author": "gg team",
   "license": "ISC",
   "dependencies": {
+    "@miracledevs/paradigm-express-webapi": "^1.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.21.4"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.14",
+    "nodemon": "^2.0.19",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^4.8.3"
   }
 }
