create db operation handlers repositories. gg-54

--- a/src/api/.env
+++ b/src/api/.env
@@ -2,4 +2,4 @@ MY_VAR_TEST = "some string"
 paradigm_api__mysql__host='localhost'
 paradigm_api__mysql__user='root'
 paradigm_api__mysql__password='admin'
-paradigm_api__mysql__database='holamundo'
+paradigm_api__mysql__database='forogg_database'
