--- a/src/api/.env
+++ b/src/api/.env
@@ -1,5 +1,5 @@
 MY_VAR_TEST = "some string"
 paradigm_api__mysql__host='localhost'
 paradigm_api__mysql__user='root'
-paradigm_api__mysql__password='admin'
+paradigm_api__mysql__password=''
 paradigm_api__mysql__database='forogg_database'
