--- a/src/api/package.json
+++ b/src/api/package.json
@@ -14,15 +14,26 @@
   "dependencies": {
     "@miracledevs/paradigm-express-webapi": "^1.2.0",
     "@miracledevs/paradigm-web-di": "^1.0.3",
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.21.4"
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "sequelize": "^6.21.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/passport": "^1.0.11",
+    "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.19",
     "npm-run-all": "^4.1.5",
     "typescript": "^4.8.3"
